[package]
name = "prometheus-cachet-glue"
version = "0.1.0"
authors = ["Jan Christian Grünhage <jcgruenhage@matrix.org>"]

[dependencies]
actix-web = "0.6.8"
serde = "1.0.59"
serde_derive = "1.0.59"
serde_json = "1.0.17"
fern = "0.5.5"
chrono = "0.4.2"
log = "0.4.1"
reqwest = "0.8.5"
hyper = "0.11.27"
futures = "0.1"
lazy_static = "1.0.0"
regex = "1.0.0"
