[package]
name = "prometheus-cachet-glue"
version = "0.1.0"
authors = ["Jan Christian Grünhage <jcgruenhage@matrix.org>"]

[dependencies]
actix-web = "0.6.15"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.22"
fern = "0.5.6"
chrono = "0.4.4"
log = "0.4.3"
reqwest = "0.8.6"
hyper = "0.11"
futures = "0.1.22"
lazy_static = "1.0.1"
regex = "1.0.1"
