[package]
name = "prometheus-cachet-glue"
version = "0.4.0"
authors = ["Jan Christian Grünhage <jcgruenhage@matrix.org>"]

[dependencies]
actix-web = "0.7.1"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
fern = "0.5.6"
chrono = "0.4.4"
log = "0.4.3"
reqwest = "0.8.6"
hyper = "0.11"
futures = "0.1.23"
lazy_static = "1.0.2"
regex = "1.0.2"
